--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^2.0.0
+  sqflite: ^1.3.0
+  path_provider: ^2.0.1
+  intl: ^0.17.0
   
 
 
