--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^2.0.0
   sqflite: ^1.3.0
-  path_provider: ^2.0.1
+  path: ^1.8.0
   intl: ^0.17.0
   
 
